# PLC_Simulator

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  ChangeLog.txt  LICENSE  README.md  THIRD_PARTY_LICENSES.txt  VS2022项目迁移CMake.md  使用说明文档.txt  项目类关系梳理与MainWorkFlow性能优化方案.md
.qoder/repowiki/zh/content/: API参考手册.md  快速入门指南.md  故障排除与调试.md  构建与部署配置.md  项目概述.md
.qoder/repowiki/zh/content/技术架构设计/: Lua脚本模块设计.md  主工作流设计.md  协议模块设计.md  技术架构设计.md  通信模块设计.md
.qoder/repowiki/zh/content/核心功能详解/: PLC通信协议支持.md  图形用户界面.md  核心功能详解.md  网络通信模式.md  自动化测试.md
.qoder/repowiki/zh/meta/: repowiki-metadata.json
CommTest_Qt/: CMakeLists.txt  MemoryLeakDetector.h  app.rc  cleanup_release_unnecessary.cmake  main.cpp  version.h
CommTest_Qt/Comm/: CommBase.cpp  CommBase.h  CommDefine.h
CommTest_Qt/Comm/Protocol/: CommProKeyencePCLink.cpp  CommProKeyencePCLink.h  CommProMitsubishiQBinary.cpp  CommProMitsubishiQBinary.h  CommProtocolBase.h
CommTest_Qt/Comm/Socket/: CommSocket.cpp  CommSocket.h
CommTest_Qt/Config/: ConfigManager.cpp  ConfigManager.h
CommTest_Qt/Gui/: CanvasWidget.cpp  CommTest_Qt.cpp  CommTest_Qt.h  CommTest_Qt.ui  ImageViewerWidget.cpp  ImageViewerWidget.h  RegisterTableManager.cpp  RegisterTableManager.h  ScriptEditor.cpp  ScriptEditor.h  ScriptManager.cpp  ScriptManager.h  SimulationPlatform.cpp  SimulationPlatform.h  SubMainWindow.cpp  SubMainWindow.h
CommTest_Qt/Gui/ScriptEditor/: CodeEditor.cpp  CodeEditor.h  LuaHighlighter.cpp  LuaHighlighter.h  ScriptEditor.cpp  ScriptEditor.h
CommTest_Qt/Gui/SimulationPlatform/: CanvasWidget.h  ImageViewerWidget.cpp  ImageViewerWidget.h  SimulationPlatform.cpp  SimulationPlatform.h
CommTest_Qt/LuaScript/: LuaScript.cpp  LuaScript.h
CommTest_Qt/MainFlow/: MainWorkFlow.cpp  MainWorkFlow.h
CommTest_Qt/Resource_Files/: CommTest_Qt.qrc  CommTest_Qt.rc
Lua/Lib/: ScriptRunner.lib
